swagger put cuy
